cmake_minimum_required(VERSION 3.22)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode main.cpp "TopInterView/Maximum Subarray/MaximumSubarray.cpp" "TopInterView/Maximum Subarray/MaximumSubarray.h" TopInterView/SqrtX_69/SqrtX.cpp TopInterView/SqrtX_69/SqrtX.h TopInterView/_66PlusOne/PlusOne.cpp TopInterView/_66PlusOne/PlusOne.h TopInterView/_70ClimbingStairs/ClimbingStairs.cpp TopInterView/_70ClimbingStairs/ClimbingStairs.h)
