cmake_minimum_required(VERSION 3.22)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode main.cpp "TopInterView/_53MaximumSubarray/MaximumSubarray.cpp" "TopInterView/_53MaximumSubarray/MaximumSubarray.h" TopInterView/_69SqrtX/SqrtX.cpp TopInterView/_69SqrtX/SqrtX.h TopInterView/_66PlusOne/PlusOne.cpp TopInterView/_66PlusOne/PlusOne.h TopInterView/_70ClimbingStairs/ClimbingStairs.cpp TopInterView/_70ClimbingStairs/ClimbingStairs.h TopInterView/_88MergeSortedArray/MergeSortedArray.cpp TopInterView/_88MergeSortedArray/MergeSortedArray.h "TopInterView/_504Base 7/Base7.cpp" "TopInterView/_504Base 7/Base7.h" TopInterView/_104MaximumDepthOfBinaryTree/MaximumDepthOfBinaryTree.cpp TopInterView/_104MaximumDepthOfBinaryTree/MaximumDepthOfBinaryTree.h TopInterView/_101SymmetricTree/SymmetricTree.cpp TopInterView/_101SymmetricTree/SymmetricTree.h TopInterView/_27RemoveElement/RemoveElement.cpp TopInterView/_27RemoveElement/RemoveElement.h)
